2009-08-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/vsnprintf.cxx (class Cyg_VsnprintfStream):
	Remove destructor.
	(vsnprintf): Apply null terminator correctly when truncated.

2009-02-16  Lars Povlsen  <lpovlsen@vitesse.com>

	* include/stdio.h: Removed extra semicolon after scanf()
	prototype.

2009-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/fflush.cxx (cyg_libc_stdio_flush_all_but): Fix silly
	typo in last change.

2009-01-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/fflush.cxx (cyg_libc_stdio_flush_all_but): Ensure the
	files table can't change. Thanks to Xiaochen Zhou for the detective
	work.

2008-07-21  Guenter Ebermann  <guenter.ebermann@gmx.at>

	* src/common/fclose.cxx (fclose): Replace config-dependent use of
	delete with free(), as the memory had been allocated with malloc.

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* src/output/vfnprintf.cxx: Add (char *) casts to make GCC/4.2.x happy.

2007-02-05  Sergei Organov  <osv@javad.com>

	* src/output/vfnprintf.cxx (vfnprintf): while formatting integers
	in decimal, convert the value to unsigned long from unsigned long
	long before processing, unless we actually print long long
	argument. This tremendously speeds-up the formatting.

2007-01-16  Sergei Organov  <osv@javad.com>

	Speed-up [v]s[n]printf() functions by a factor of about 2+. In
	particular, sprintf(s, "%s", "") becomes faster 2.8 times,
	printing of every character -- 1.7 times, and, as a result, e.g.,
	printing of a string of length 50 -- 2.2 times.

	* include/stream.hxx (class Cyg_OutputStream): New ABC.
	(class Cyg_StdioStream): inherit from Cyg_OutputStream; make
	the destructor, write(), and get_error() virtual.
	
	* src/output/vfnprintf.cxx (vfnprintf): Use ABC Cyg_OutputStream
	instead of Cyg_StdioStream.

	* src/common/vsnprintf.cxx (class Cyg_VsnprintfStream): New class
	that specializes Cyg_OutputStream for output to a string.